test/asm/string-formatting.err
ERROR: string-formatting.asm(9):
    Formatting string with prefix flag '#'
error: Assembly aborted (1 errors)!
